infrastructure/k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdm-ingress
  namespace: mdm-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mdm.bankxyz.co.id
        - api.mdm.bankxyz.co.id
        - steward.mdm.bankxyz.co.id
        - admin.mdm.bankxyz.co.id
        - c360.mdm.bankxyz.co.id
      secretName: mdm-tls-secret
  rules:
    - host: api.mdm.bankxyz.co.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
    - host: steward.mdm.bankxyz.co.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: steward-ui
                port:
                  number: 3000
    - host: admin.mdm.bankxyz.co.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-dashboard
                port:
                  number: 3000
    - host: c360.mdm.bankxyz.co.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer360-ui
                port:
                  number: 3000
    - host: mdm.bankxyz.co.id
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: steward-ui
                port:
                  number: 3000
